--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^4.23.4",
     "axios": "^0.27.2",
+    "cropperjs": "^1.5.12",
     "immutable": "^4.1.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
