--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.23.4",
     "axios": "^0.27.2",
     "cropperjs": "^1.5.12",
+    "hls.js": "^1.2.4",
     "immutable": "^4.1.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
