--- a/codergb-hub-server/package.json
+++ b/codergb-hub-server/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "dotenv": "^16.0.3",
+    "fluent-ffmpeg": "^2.1.2",
     "jimp": "^0.16.2",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^12.0.0",
+    "koa-static": "^5.0.0",
     "koa-websocket": "^7.0.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
