--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -19,6 +19,7 @@
     "cropperjs": "^1.5.12",
     "hls.js": "^1.2.4",
     "immutable": "^4.1.0",
+    "moment": "^2.29.4",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
