--- a/codergb-hub-server/.gitignore
+++ b/codergb-hub-server/.gitignore
@@ -10,7 +10,10 @@
 
 # production
 /build
-/upload
+/upload/channel/avatar
+/upload/image/
+/upload/user/avatar
+/upload/video
 /upload_temp
 # misc
 .DS_Store
