--- a/codergb_hub_app/pubspec.yaml
+++ b/codergb_hub_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^4.0.6
   hive: ^2.2.3
   flutter_screenutil: ^5.6.0
+  path_provider: ^2.0.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,11 +59,11 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  # uses-material-design: true;
-
+  uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-   assets:
+  assets:
      - assets/bgc.png
+     - assets/user.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
