--- a/codergb_hub_app/pubspec.yaml
+++ b/codergb_hub_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   hive: ^2.2.3
   flutter_screenutil: ^5.6.0
   path_provider: ^2.0.11
+  pull_to_refresh: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
