--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.28",
+    "pinia": "^2.0.29",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
