--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^1.2.3",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.28",
     "pinia": "^2.0.29",
@@ -16,6 +16,7 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
