--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.5.13",
     "element-plus": "^2.2.28",
     "pinia": "^2.0.29",
     "vue": "^3.2.13",
