--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/spark-md5": "^3.0.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cropperjs": "^1.5.13",
     "element-plus": "^2.2.28",
     "pinia": "^2.0.29",
+    "spark-md5": "^3.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
