--- a/codergb-hub-server/package.json
+++ b/codergb-hub-server/package.json
@@ -11,6 +11,7 @@
     "koa-static": "^5.0.0",
     "koa-websocket": "^7.0.0",
     "mysql2": "^2.3.3",
+    "node-schedule": "^2.1.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   },
