文件上传优化

--- a/codergb-hub-server/.env
+++ b/codergb-hub-server/.env
@@ -4,5 +4,5 @@ SOCKET_APP_PORT=8989
 MYSQL_PORT=3306
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=250520
+MYSQL_PASSWORD=guobin250520
 MYSQL_DATABASE=codergb-hub
