--- a/codergb-hub-uniapp/manifest.json
+++ b/codergb-hub-uniapp/manifest.json
@@ -50,7 +50,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wxd620522f11ede6c7",
         "setting" : {
             "urlCheck" : false
         },
