--- a/codergb-hub-uniapp/manifest.json
+++ b/codergb-hub-uniapp/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "codergb-hub-uniapp",
-    "appid" : "",
+    "appid" : "__UNI__4B5C06C",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
