--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "cropperjs": "^1.5.13",
     "element-plus": "^2.2.28",
+    "moment": "^2.29.4",
     "pinia": "^2.0.29",
     "spark-md5": "^3.0.2",
     "vue": "^3.2.13",
