--- a/codergb-hub-server/package.json
+++ b/codergb-hub-server/package.json
@@ -10,6 +10,7 @@
     "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "koa-websocket": "^7.0.0",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "node-schedule": "^2.1.1",
     "nodemon": "^2.0.20",
