--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -1,63 +1,48 @@
 {
   "name": "codergb-hub-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.64",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-immutable": "^4.0.3",
-    "@types/spark-md5": "^3.0.2",
-    "@types/styled-components": "^5.1.26",
-    "antd": "^4.23.4",
-    "axios": "^0.27.2",
-    "cropperjs": "^1.5.12",
-    "echarts": "^5.4.3",
-    "hls.js": "^1.2.4",
-    "immutable": "^4.1.0",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.4",
-    "prettier": "^2.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.4.1",
-    "spark-md5": "^3.0.2",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/react": "18.0.2",
+    "@types/react-dom": "18.0.6",
+    "@types/react-router-dom": "5.3.3",
+    "@types/redux-immutable": "4.0.3",
+    "@types/spark-md5": "^3.0.4",
+    "@types/styled-components": "^5.1.34",
+    "antd": "4.23.4",
+    "axios": "^1.6.3",
+    "babel-loader": "^9.1.3",
+    "cropperjs": "^1.6.1",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "echarts": "^5.4.3",
+    "hls.js": "^1.4.14",
+    "html-webpack-plugin": "^5.6.0",
+    "immutable": "4.1.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.4",
+    "react-router-dom": "6.4.1",
+    "redux": "4.2.0",
+    "redux-immutable": "4.0.0",
+    "redux-thunk": "2.4.1",
+    "spark-md5": "^3.0.2",
+    "style-loader": "^3.3.3",
+    "styled-components": "^6.1.6",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
