--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start:dev": "cross-env CURRENT_ENV=development webpack serve",
     "start:prod": "cross-env CURRENT_ENV=production webpack",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "start": "cross-env CURRENT_ENV=development node scripts/start.js webpack serve"
   },
   "dependencies": {
     "@babel/core": "^7.23.7",
@@ -22,6 +23,7 @@
     "antd": "4.23.4",
     "axios": "^1.6.3",
     "babel-loader": "^9.1.3",
+    "chalk": "^5.3.0",
     "cropperjs": "^1.6.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
