--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -4,10 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:dev": "cross-env CURRENT_ENV=development webpack serve",
-    "start:prod": "cross-env CURRENT_ENV=production webpack",
     "prettier": "prettier --write .",
-    "start": "cross-env CURRENT_ENV=development node scripts/start.js"
+    "start:dev": "cross-env CURRENT_ENV=development node scripts/start.js",
+    "start:build": "cross-env CURRENT_ENV=production node scripts/build.js"
   },
   "dependencies": {
     "@babel/core": "^7.23.7",
