--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -40,6 +40,7 @@
     "less-loader": "^11.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "postcss-loader": "^7.3.4",
     "prettier": "^3.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
