--- a/codergb-hub-profile/.env.development
+++ b/codergb-hub-profile/.env.development
@@ -1,4 +1,5 @@
-VUE_APP_SERVER_PORT=8888
+VITE_NODE_ENV=development
+VITE_SERVER_PORT=8888
 
-VUE_APP_HOST=localhost
-VUE_APP_WEBPACK_SERVER_PORT=7877
+VITE_HOST=localhost
+VITE_WEBPACK_SERVER_PORT=7877
