--- a/codergb-hub-profile/.env.production
+++ b/codergb-hub-profile/.env.production
@@ -1,5 +1,6 @@
-VUE_APP_SERVER_PORT=8888
+VITE_NODE_ENV=production
+VITE_SERVER_PORT=8888
 
-VUE_APP_HOST=8.140.243.23
-VUE_APP_PORT=7877
-VUE_APP_WEBPACK_SERVER_PORT=7877
+VITE_HOST=8.140.243.23
+VITE_PORT=7877
+VITE_WEBPACK_SERVER_PORT=7877
