--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build ----mode production",
-    "lint": "vue-cli-service lint"
+    "dev": "vite --mode development",
+    "build": "vue-tsc && vite build --mode production"
   },
   "dependencies": {
     "@types/spark-md5": "^3.0.2",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cropperjs": "^1.5.13",
@@ -18,19 +19,15 @@
     "moment": "^2.29.4",
     "pinia": "^2.0.29",
     "spark-md5": "^3.0.2",
+    "vite": "^5.0.11",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-tsc": "^1.8.27"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
