--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.3",
     "babel-loader": "^9.1.3",
     "chalk": "^5.3.0",
+    "copy-webpack-plugin": "^12.0.1",
     "cropperjs": "^1.6.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
