--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
+    "@types/react-transition-group": "^4.4.10",
     "@types/redux-immutable": "4.0.3",
     "@types/spark-md5": "^3.0.4",
     "@types/styled-components": "^5.1.34",
@@ -47,6 +48,7 @@
     "react-dom": "18.2.0",
     "react-redux": "8.0.4",
     "react-router-dom": "6.4.1",
+    "react-transition-group": "^4.4.5",
     "redux": "4.2.0",
     "redux-immutable": "4.0.0",
     "redux-thunk": "2.4.1",
