--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -25,7 +25,8 @@
     "vue": "^3.2.13",
     "vue-i18n": "^9.9.0",
     "vue-router": "^4.0.3",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "watermark-dom": "^2.3.0"
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.0.10",
