--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -41,6 +41,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.4",
     "lodash": "^4.17.21",
+    "mini-css-extract-plugin": "^2.7.7",
     "moment": "^2.30.1",
     "postcss-loader": "^7.3.4",
     "prettier": "^3.1.1",
