--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cropperjs": "^1.5.13",
+    "echarts": "^5.4.3",
     "element-plus": "^2.2.28",
     "hls.js": "^1.4.14",
     "lodash": "^4.17.21",
