管理员端打包优化

--- a/codergb-hub-profile/.env.production
+++ b/codergb-hub-profile/.env.production
@@ -1,6 +1,6 @@
 VITE_NODE_ENV=production
 VITE_SERVER_PORT=8888
 
-VITE_HOST=8.140.243.23
-VITE_PORT=7877
-VITE_WEBPACK_SERVER_PORT=7877
+VITE_HOST=localhost
+VITE_PORT=8888
+VITE_WEBPACK_SERVER_PORT=8888
