--- a/codergb-hub-profile/package.json
+++ b/codergb-hub-profile/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "vite --mode development",
-    "build": "vue-tsc && vite build --mode production"
+    "build:dev": "vue-tsc && vite build --mode production",
+    "build:prod": "vite build --mode production"
   },
   "dependencies": {
     "@types/spark-md5": "^3.0.2",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/eslint-config-typescript": "^9.1.0",
