--- a/codergb-hub-nuxt/package.json
+++ b/codergb-hub-nuxt/package.json
@@ -11,6 +11,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "element-plus": "^2.6.1",
+    "less": "^4.2.0",
+    "moment": "^2.30.1",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
