--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -70,5 +70,8 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.33.2"
+  },
+  "engines": {
+    "node": ">=19.9.0"
   }
 }
