--- a/codergb-hub-client/package.json
+++ b/codergb-hub-client/package.json
@@ -30,6 +30,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
+    "danmu.js": "^1.1.13",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
     "echarts": "^5.4.3",
@@ -61,7 +62,9 @@
     "typescript": "*",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "xgplayer": "^3.0.20",
+    "xgplayer-hls": "^3.0.20"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.4.0",
